fixed spacing for Github cards

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -729,6 +729,10 @@ overflow-x: hidden;
  width: 79%;
  }
 
+ .github-container {
+  padding-left: 0px;
+ }
+
 }
 
 @media only screen and (max-width: 400px)  {
